# genetic-algorithm

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.cla-signatures/v1/: cla.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dep-scan.yml  license-check.yml  release.yml  scorecard.yml
docs/: requirements.txt
docs/source/: conf.py  genetic_algorithm.rst  index.rst  modules.rst
examples/: __init__.py  autoresearcher.py  optimize_sphere.py
genetic_algorithm/: chromosome.py
tests/: test_chromosome.py  test_fitness.py  test_plugins.py  test_population.py
