[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "genetic-algorithm"
version = "0.1.0"
description = "A dependency-free genetic algorithm engine with pluggable fitness criteria."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Santander AI Lab" }]
keywords = [
    "genetic-algorithm",
    "evolutionary-computation",
    "optimization",
    "ai",
    "autoresearch",
]
# NOTE: genetic_algorithm is intentionally stdlib-only. Do NOT add a
# `dependencies = [...]` table here — the `license-check` workflow fails the
# build if a runtime dependency manifest is introduced.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/SantanderAI/genetic-algorithm"
Repository = "https://github.com/SantanderAI/genetic-algorithm"
Issues = "https://github.com/SantanderAI/genetic-algorithm/issues"
Changelog = "https://github.com/SantanderAI/genetic-algorithm/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["genetic_algorithm"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["genetic_algorithm", "tests", "examples"]
# Sphinx config is generated boilerplate; do not lint it.
extend-exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PTH"]
# Line length is enforced by Black formatting; E501 would also flag long string
# literals that cannot be wrapped, so we defer length entirely to the formatter.
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["genetic_algorithm"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
files = ["genetic_algorithm"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --cov=genetic_algorithm --cov-report=term-missing --cov-fail-under=99"

[tool.coverage.run]
branch = true
source = ["genetic_algorithm"]

[tool.coverage.report]
show_missing = true
fail_under = 99
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
